peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/Renewal_Fee_Sharing_For_Reports__c.object-meta.xml
<CustomObject>
    <label>Renewal Fee Sharing For Reports</label>
    <nameField>
        <displayFormat>RFS-{000000000}</displayFormat>
        <label>Renewal Fee Sharing For Reports Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Fee Sharing For Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>