peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Amount_Due_to_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_Dealer__c</fullName>
    <label>Amount Due to Dealer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>