peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Conditional_Renewal_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Renewal_Payments_Received__c</fullName>
    <label>Conditional Renewal Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>