peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Contract_Payment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Payment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>