peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>