peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>