peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Day_of_Renewal_Active__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Renewal_Active__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Day of Renewal Active</label>
    <length>10</length>
    <type>Text</type>
</CustomField>