peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Cost__c</fullName>
    <label>Equipment Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>