peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>