peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lease Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>