peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Month_To_Start_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Month_To_Start_Sharing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month To Start Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>