peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Number_of_Renewal_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Renewal_Payments_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Renewal Payments Received</label>
    <length>100</length>
    <type>Text</type>
</CustomField>