peac_dev/force-app/main/default/objects/Renewal_Fee_Sharing_For_Reports__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>